[package]
name = "roombot"
version = "0.1.0"
edition = "2021"




[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.6.0"
actix-web = {version ="4.3.1", features = ["openssl"]}
directories = "5.0.1"
gpt_text = {path = "gpt_text"}
handlebars = {version = "4.3.7", features = ["dir_source"]}
# img2vec = "0.2.15"
pinata_ipfs = {path = "pinata_ipfs"}
music_stream = { path = "music_stream"}
reqwest = {version =  "0.11.18", features = ["json", "blocking"]}
serde = { version = "1.0.180" , features = ["derive"] }
auth = { path = "auth" }
futures-util = "0.3.28"
once_cell = "1.18.0"
l2net ={ path = "l2net" }
movies ={ path = "movies" }
mongodb = {version = "2.6.1", default-features = false, features = ["async-std-runtime"]}
dotenv = "0.15.0"
openssl = {version = "0.10.60", features=["v110"]}

