[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"

mongodb = {version = "2.6.1", default-features = false, features = ["async-std-runtime"]}
serde = { version = "1.0.188", features = ["derive"]}

