[package]
name = "img2vec"
version = "0.2.16"
edition = "2021"

description = "As the name suggested 'ImagetoVector', which allow to operate on images."
keyword = "images, svd, pca, ndarray, array2, vector, sled:db, image recognition,"
repository = "https://github.com/WisdomEnigma/Roombot/"
license = "MIT"
keywords = ["images", "vector", "async", "db"]
license-file = "LICENSE"
exclude = ["target"]

publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
image = "0.24.6"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"]}
sled = "0.34.7"
vec_security = "0.1.1"
