[package]
name = "l2net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nodeless-rs = "0.1.0"
futures-util = "0.3.28"
serde = { version = "1.0.188", features = ["derive"]}

mongodb = {version = "2.6.1", default-features = false, features = ["async-std-runtime"]}
url = "2.4.1"
bitcoins = "0.7.0"
coins-core = "0.8.7"