[package]
name = "movies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chatgpt-functions = "0.3.6"
imdb-async = "0.11.2"
once_cell = "1.18.0"
serde = { version = "1.0.188", features = ["derive"]}
