[package]
name = "music_stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = {version = "2.6.1", default-features = false, features = ["async-std-runtime"]}
futures-util = "0.3.28"
serde = { version = "1.0.188", features = ["derive"]}
uplink-sys = "0.5.2"


